<resources>
    <string name="app_name">EmployeeReg</string>
    <string name="employee_registration">Employee Registration</string>
    <string name="employee_name">Employee Name</string>
    <string name="email">Email</string>
    <string name="submit">submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="joining_date">Joining Date</string>
    <string name="b_com">B.Com</string>
    <string name="bca">Bca</string>
    <string name="bba">Bba</string>
    <string name="designation">Designation</string>
    <string name="agreement">Agreement</string>
    <string name="i_have_read_and_accept_the">I Have Read and Accept the</string>
    <string name="password">Password</string>
    <string name="dialogue_mess">Can not Add Your Personal details in Password !</string>
    <string name="employee_info">Employee Info</string>
    <string name="empname">EmpName :</string>
    <string name="employee_namex">Employee Name</string>
    <string name="empemail">EmpEmail :</string>
    <string name="empgender">EmpGender :</string>
    <string name="empjdate">EmpJdate :</string>
    <string name="empmno">EmpMno :</string>
    <string name="empcourse">EmpCourse :</string>
    <string name="empdesignation">EmpDesignation :</string>
    <string name="employee_emailx">Employee Email</string>
    <string name="employee_genderx">Employee Gender</string>
    <string name="employee_join_datex">Employee Join Date</string>
    <string name="employee_mobile_nox">Employee Mobile No</string>
    <string name="employee_coursex">Employee Course</string>
    <string name="employee_designationx">Employee Designation</string>
    <string name="want_to_sign_in">Want to Sign In ?</string>
    <string name="employee_login">Employee Login</string>
    <string name="sign_in_here">Sign in Here</string>
    <string name="sign_in">Sign IN</string>
</resources>