<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="22dp"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
       android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_info"
            android:textSize="22sp"
            android:textColor="@color/Primary_color"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/empname"
                android:textSize="17sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/Primary_color"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/Primary_color"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:hint="@string/employee_namex"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/empemail"
                android:textSize="17sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/Primary_color"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/employee_emailx"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/Primary_color"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/empgender"
                android:textSize="17sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/Primary_color"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpGender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/Primary_color"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:hint="@string/employee_genderx"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/empjdate"
                android:textSize="17sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/Primary_color"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpJdate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/Primary_color"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:hint="@string/employee_join_datex"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/empmno"
                android:textSize="17sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/Primary_color"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpMno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/Primary_color"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:hint="@string/employee_mobile_nox"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/empcourse"
                android:textSize="17sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/Primary_color"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpCourse"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/Primary_color"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:hint="@string/employee_coursex"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/empdesignation"
                android:textSize="17sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/Primary_color"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpDesignation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/Primary_color"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:hint="@string/employee_designationx"
                android:textSize="17sp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnGetData"
            android:layout_marginTop="22dp"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:textColor="@color/white"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/Primary_color"
            android:text="@string/get_data"

            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>