<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:padding="22dp"
    android:clipToPadding="false"
    tools:context=".Activity.SignInEmp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_login"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:textColor="@color/Primary_color"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/EmpEditEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textColor="@color/Primary_color"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/backgroundedt"/>

        <EditText
            android:id="@+id/EmpEditPasswd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColor="@color/Primary_color"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/backgroundedt"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnSignIn"
            android:layout_width="130dp"
            android:layout_height="55dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="27dp"
            app:cornerRadius="11dp"/>

    </LinearLayout>

</ScrollView>