<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="22dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/empPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/round_account_circle_24"
            android:tint="@color/img_bg"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/Primary_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/employee_namex"
                android:textColor="@color/Primary_color"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpEmail"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/employee_emailx"
                android:textColor="@color/Primary_color"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/TextEmpMno"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/employee_mobile_nox"
                android:textColor="@color/Primary_color"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="17sp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>